<resources>
    <string name="app_name">MercuryNeo</string>
    <string name="mercury_server_url">Mercury Server URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_account">Add Account</string>
    <string name="close">Close</string>
    <string name="accounts">Accounts</string>
    <string name="error_server_url">Mercury Server URL is required</string>
    <string name="error_username">Username is required</string>
    <string name="error_password">Password is required</string>
    <string name="add_account_success">Account added successfully</string>
    <string name="go">Go</string>
    <string name="captchahint">Enter Captcha</string>
    <string name="internal_error">Internal Error Occurred. Unable to complete your request</string>
    <string name="please_wait">Please wait ...</string>
    <string name="error_captcha">Captcha is required</string>
    <string name="invalid_captcha_value">Invalid Captcha Value</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="unable_to_complete_request">Server unable to complete request</string>
    <string name="captcha_timeout">Captcha Timeout</string>
    <string name="mercury_server_url_hint">Enter Mercury Server URL</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="login_success">Login successfully</string>
    <string name="access_token">accessToken</string>
    <string name="refresh_token">refreshToken</string>
    <string name="logout">Logout</string>
    <string name="confirm">Confirm</string>
    <string name="logout_confirm_msg">Are you sure you want to logout?</string>
    <string name="delete_confirm_msg">Are you sure you want to Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_user_logged_in">isUserLoggedIn</string>
    <string name="app_legal_notice">C-DAC. All rights reserved</string>
    <string name="loader">Loader</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>